fix for spacing in small promo

--- a/packages/react-components/src/components/PromoBannerV2/PromoBannerV2.module.scss
+++ b/packages/react-components/src/components/PromoBannerV2/PromoBannerV2.module.scss
@@ -64,6 +64,7 @@ $base-class: 'promo-banner-v2';
     .#{$base-class}__content {
       flex: 0 1 auto;
       order: 2;
+      padding: var(--spacing-5);
     }
 
     .#{$base-class}__additional-content {
